<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AcessarActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_info"
            android:layout_marginTop="35dp"
            android:textSize="26dp"
            android:textAlignment="center"  />
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_info_nome"
            android:layout_marginHorizontal="35dp"
            />
        <EditText
            android:id="@+id/cadastro_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            />

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_info_sobrenome"
            android:layout_marginHorizontal="35dp"
            />
        <EditText
            android:id="@+id/cadastro_sobrenome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            />

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_info_email"
            android:layout_marginHorizontal="35dp"
            />
        <EditText
            android:id="@+id/cadastro_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:hint="@string/cadastro_email"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_info_senha"
            android:layout_marginHorizontal="35dp"
            />
        <EditText
            android:id="@+id/cadastro_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:text="@string/cadastro_senha"
            android:textColor="@color/black"

            />

        <Button
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_cadastro"
            android:layout_marginHorizontal="45dp"/>



    </LinearLayout>

</ScrollView>