<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AcessarActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="120dp"
            android:textAlignment="center"
            android:layout_marginHorizontal="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acessar_legenda_inicial"/>

        <EditText
            android:id="@+id/log_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="30dp"
            android:hint="@string/acessar_hint_user"
            />
        <EditText
            android:id="@+id/log_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:hint="@string/acessar_hint_senha"
            android:inputType="textPassword"
            />
        <Button
            android:id="@+id/btn_continuar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acessar_btn_continuar"
            android:layout_marginHorizontal="30dp"/>
        <TextView

            android:id="@+id/tv_cad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acessar_criarConta"
            android:textAlignment="center"
            android:textStyle="bold"
            android:onClick="onClick"
            android:textColor="@color/colorPrimary"
            />







    </LinearLayout>


</ScrollView>