<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AcessarActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/gray">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/main_categorias"
                android:textColor="@color/white"
                android:textSize="20dp"

                />

        </LinearLayout>


        <HorizontalScrollView
            android:background="@color/silver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

               <LinearLayout
                   android:orientation="vertical"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">
                   <ImageView
                       android:layout_margin="5dp"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:src="@drawable/categorias_branco"
                       />
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:text="@string/main_prod_tortas"
                       android:layout_marginBottom="7dp"
                       android:textAlignment="center"/>
               </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/categorias_branco"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/main_prod_doces"
                        android:textAlignment="center"
                        android:layout_marginBottom="7dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:src="@drawable/categorias_branco" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="7dp"
                        android:text="@string/main_prod_salgado"
                        android:textAlignment="center"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/categorias_branco"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/main_prod_paes"
                        android:textAlignment="center"
                        android:layout_marginBottom="7dp" />


                </LinearLayout>









            </LinearLayout>






        </HorizontalScrollView>







        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/gray">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/main_recomendados"
                android:textColor="@color/white"
                android:textSize="20dp"

                />

        </LinearLayout>


    </LinearLayout>

</ScrollView>